--- a/src/ex9_html-css-fundamentals-part1/task-04.html
+++ b/src/ex9_html-css-fundamentals-part1/task-04.html
@@ -3,55 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Task-04</title>
-	<style>
-		.first_way,
-		.second_way {
-			position: relative;
-			width: 400px;
-			height: 200px;
-			background-color: #bfe3d1;
-		}
-		.first_way > div {
-			position: relative;
-			top: -5px;
-			left: -5px;
-			width: 400px;
-			height: 200px;
-			background-color: #90cdaf;
-		}
-		.first_way div div {
-			position: relative;
-			top: -5px;
-			left: -5px;
-			width: 400px;
-			height: 200px;			
-			background-color: #60b88d;
-		}
-		.second_way::before {
-			content: '';
-			position: absolute;
-			top: -5px;
-			left: -5px;
-			width: 400px;
-			height: 200px;
-			background-color: #90cdaf;
-		}
-		.second_way::after {
-			content: '';
-			position: absolute;
-			top: -10px;
-			left: -10px;
-			width: 400px;
-			height: 200px;
-			background-color: #60b88d;
-		}
-		.third_way {
-			width: 400px;
-			height: 200px;
-			background-color: #60b88d;
-			box-shadow: 5px 5px 0px 0px #90cdaf, 10px 10px 0px 0px #bfe3d1;
-		}
-	</style>
+	<link rel="stylesheet" href="task-04.css">
 </head>
 <body>
 	<div class="first_way">
