--- a/src/ex9_html-css-fundamentals-part1/task-additional.html
+++ b/src/ex9_html-css-fundamentals-part1/task-additional.html
@@ -119,12 +119,12 @@
 			<label>
 				<span>Email:</span>
 				<input type="email" placeholder="placeholder text" required>
-				<p class="marker"></p>
+				<span class="marker"></span>
 			</label>
 			<label>
 				<span>Website:</span>
 				<input type="url" placeholder="placeholder text" required>
-				<p class="marker"></p>
+				<span class="marker"></span>
 			</label>
 			<label>
 				<span>Message:</span>
