--- a/src/ex9_html-css-fundamentals-part1/task-flex.html
+++ b/src/ex9_html-css-fundamentals-part1/task-flex.html
@@ -17,7 +17,7 @@
 		}
 		section {
 		  background: lightgreen;
-		  width: 75%;
+		  flex: 3;
 		  box-sizing: border-box;
 		}
 		article {
@@ -26,7 +26,7 @@
 		}
 		aside {
 		  background: pink;
-		  width: 25%;
+		  flex: 1;
 		  box-sizing: border-box;
 		}
 		header, article, section, .module {
